# OpenCLMandelbrot

./: .gitignore  CMakeLists.txt
cmake_files/: FindSDL2.cmake
source/: consts.h  main.cpp  mandelbrot_renderer.cpp  mandelbrot_renderer.h
source/kernel/: kernel.cl
